unpackaged/main/default/objects/Community_Stat__c/Community_Stat__c.object-meta.xml
<CustomObject>
    <label>Community Stat</label>
    <nameField>
        <displayFormat>ComStat-{00}</displayFormat>
        <label>Community Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>