unpackaged/main/default/objects/Community_Stat__c/fields/Community_Item__c.field-meta.xml
<CustomField>
    <fullName>Community_Item__c</fullName>
    <label>Community Item</label>
    <referenceTo>Community_Items__c</referenceTo>
    <relationshipLabel>Community Stats</relationshipLabel>
    <relationshipName>Community_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>