unpackaged/main/default/objects/Community_Stat__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Stats</relationshipLabel>
    <relationshipName>Community_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>