unpackaged/main/default/objects/Community_Stat__c/fields/Hub_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Hub_Item_Name__c</fullName>
    <formula>Community_Item__r.Title__c&amp;  IF(ISBLANK(Community_Item__r.ALT_Tag__c), NULL, &quot; // &quot;&amp; Community_Item__r.ALT_Tag__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub Item Name</label>
    <type>Text</type>
</CustomField>