unpackaged/main/default/objects/Community_Stat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Community_Item__c</columns>
    <columns>Hub_Item_Name__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>